service_worker and manifest created

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div>
         <div id="yearDisplay"></div>
         <select id="yearPicker" onchange="updateYearOnSelected()"></select>
+        <button id="reset" onclick="resetToCurrentYear()">Reset</button>
       </div>
 
       <button id="nextButton">Next</button>
